[package]
authors = ["Sebastian Wicki <gandro@gmx.net>"]
name = "depart.sh"
version = "0.1.0"

[dependencies]
ansi_term = "0.11.0"
chrono = "0.4.2"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1.21"
log = "0.4.1"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
termcolor = "0.3.6"
tokio = "0.1.6"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"
