[package]
authors = ["Sebastian Wicki <gandro@gmx.net>"]
name = "tabl-cf"
version = "0.1.0"

[dependencies]
ansi_term = "0.11.0"
bytes = "0.4.9"
chrono = "0.4.2"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1.21"
hyper = "0.12"
hyper-tls = "0.2"
log = "0.4.1"
num_cpus = "1.8.0"
pretty_env_logger = "0.2.4"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
termcolor = "0.3.6"
tokio = "0.1.6"

[dependencies.warp]
git = "https://github.com/seanmonstar/warp"
optional = false
